ZPI-62: API Update
