# backend/api/routers.go
@@ -3,18 +3,17 @@
  *
  * This is a backend API server documentation for KubernetesAccessManager  Some useful links: - [Jira](https://samuelus.atlassian.net/jira/software/projects/ZPI/boards/4) - [Confluence](https://samuelus.atlassian.net/wiki/spaces/ZPI/overview)
  *
- * API version: 0.0.3
+ * API version: 0.0.4
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 package api
 
 import (
 	"fmt"
-	"github.com/gorilla/mux"
 	"net/http"
 	"strings"
 
-	"github.com/ZPI-2024-25/KubernetesAccessManager/common"
+	"github.com/gorilla/mux"
 )
 
 type Route struct {
@@ -31,7 +30,7 @@ func NewRouter() *mux.Router {
 	for _, route := range routes {
 		var handler http.Handler
 		handler = route.HandlerFunc
-		handler = common.Logger(handler, route.Name)
+		handler = Logger(handler, route.Name)
 
 		router.
 			Methods(route.Method).
@@ -130,26 +129,5 @@ var routes = Routes{
 		strings.ToUpper("Get"),
 		"/api/v1/auth/status",
 		CheckLoginStatus,
-	},
-
-	Route{
-		"ExchangeAuthCode",
-		strings.ToUpper("Post"),
-		"/api/v1/auth/callback",
-		ExchangeAuthCode,
-	},
-
-	Route{
-		"LogoutUser",
-		strings.ToUpper("Post"),
-		"/api/v1/auth/logout",
-		LogoutUser,
-	},
-
-	Route{
-		"RefreshToken",
-		strings.ToUpper("Post"),
-		"/api/v1/auth/refresh",
-		RefreshToken,
 	},
 }
