# backend/models/model_user_status_user.go
@@ -3,12 +3,16 @@
  *
  * This is a backend API server documentation for KubernetesAccessManager  Some useful links: - [Jira](https://samuelus.atlassian.net/jira/software/projects/ZPI/boards/4) - [Confluence](https://samuelus.atlassian.net/wiki/spaces/ZPI/overview)
  *
- * API version: 0.0.3
+ * API version: 0.0.4
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 package models
 
-type AuthCallbackBody struct {
-	// Authorization code.
-	Code string `json:"code,omitempty"`
+type UserStatusUser struct {
+	// JWT expiration time
+	Exp int32 `json:"exp,omitempty"`
+	// User's preferred username
+	PreferredUsername string `json:"preferred_username,omitempty"`
+	// User's email address
+	Email string `json:"email,omitempty"`
 }
